fix: improve blog readability on mobile

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -41,6 +41,8 @@
 }
 
 .post-content {
+  max-width: 70ch;
+  margin: 0 auto;
   h1, h2, h3, h4, h5, h6 {
     color: $primary-navy;
     margin-top: $spacing-lg;
